snapshot-tests/tests/snapshots/parser__bad_table_names__redefinition.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[DuplicateTable]: redefinition of table `"b"`
  ┌─ redefinition:2:1
  │  
1 │ ╭ [a.b]
2 │ │ [a."b"]
  │ │ ^^^^^^^ duplicate table
  │ ╰' first table instance
